<fix> jwtProvider 설정 오류 해결